have to pin the pip version because the newer version fails to install

--- a/ansible-provision/roles/docker.ubuntu/tasks/main.yml
+++ b/ansible-provision/roles/docker.ubuntu/tasks/main.yml
@@ -59,12 +59,11 @@
 - name: Install pip, python-dev package with apt
   apt:
     pkg: "{{ item }}"
-    state: latest
     update_cache: yes
     cache_valid_time: 600
   with_items:
     - python-dev
-    - python-pip
+    - python-pip=1.5.4-1
 
 # Upgrade pip with pip to fix angstwad/docker.ubuntu/pull/35 and docker-py/issues/525
 # Install latest version when no specific release is set.
